--- a/README
+++ b/README
@@ -1,11 +1,27 @@
 osmfromtrack
 ============
 
-Download OSM data around a GPX track
+Download OSM data from within a coordinate box
 
+State
+=====
+Initially created, Ongoing development, not usable yet
 
 Description
 ===========
+
+You can feed the tool with two set of coorinates (like from Google Map's LatLng marker)
+and the box will be fetched from OSM.
+
+
+osmfromtrack - Later Goal
+============
+
+Download OSM data around a GPX track
+
+Description - Later Goal
+===========
+
 You can feed the tool with a track in GPX format.
 It then fetches all the OSM data around a certain distance
 of the track.
@@ -15,10 +31,6 @@ which I can then download to my Garmin eTrex30 to have the map
 material for my next trip available.
 
 
-State
-=====
-Initially created, Ongoing development, not usable yet
-
 
 Brainstorming
 =============
@@ -27,6 +39,8 @@ Manual data fetching with OSM (X)API:
        47.1916
 9.8237		9.8746
 	47.1423
+
+- bbox = left,down,right,up
 
 API - Data identical
 curl --location --globoff -o map-osm-api.osm  'http://api.openstreetmap.org/api/0.6/map?bbox=9.8237,47.1423,9.8746,47.1916'
